# package_android-system-extras

./: .travis.yml  Android.mk  Makefile.am  configure.ac
debian/: README  README.source  changelog  control  copyright  libandroid-testutil0-dev.install  libandroid-testutil0.install  libandroid-testutil0.lintian-overrides  watch
tests/: Android.mk
tests/lib/: Android.mk
tests/lib/testUtil/: Android.mk  android-testutil-0.0.pc.in  testUtil.c
